samples/_failures_safe/1761472804_d60f83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10540e91.c: In function ‘main’:
./samples/SAFE/__tmp_10540e91.c:166:9: error: expected declaration or statement at end of input
  166 |         }
      |         ^
./samples/SAFE/__tmp_10540e91.c:166:9: error: expected declaration or statement at end of input
